

2000-02-16  Sven Dietrich <sven_dietrich@trimble.com>

	* winnt/scripts/mkver.bat:    Frederick Czajka [w2k@austin.rr.com]
	  winnt/ntpq/ntpq.dsp:        modified mkver.bat to eliminate the
	  winnt/ntpd/ntpd.dsp:	      need to have Perl installed and the
	  winnt/ntpdc/ntpdc.dsp:      PERL environment variable to be set.
	  winnt/ntpdate/ntpdate.dsp:
	  winnt/ntptrace/ntptrace.dsp:    Thanks, Frederick!

	* ntpd/refclock_nmea.c: Correctly interpret the quality indicator.

2000-02-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_nmea.c: Correctly interpret the quality indicator.
	Deal with the time suppliedin centiseconds.  GPGCA/GPGGA cleanup.
	From: Andrew Hood <ajhood@fl.net.au>

	* libparse/Makefile.am (K_CFLAGS): Use instead.  Add NEED_NTP_BOPS.

2000-02-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/ntp-wait.in: Intensify, including some suggestions from
	Ulrich.

	* configure.in: 4.0.99e

	* scripts/ntp-wait.in: Lose cruft, sleep after each try.

	* scripts/ntp-restart: It's ntpd now.  Also, call ntp-wait.

	* configure.in (AC_CONFIG_*): New scripts that use PATH_PERL

	* scripts/Makefile.am (noinst_SCRIPTS): Added ntp-wait
	(noinst_SCRIPTS): Added all of the scripts that now use PATH_PERL

	* configure.in: Get the path to perl
	(AC_CONFIG_*): Added scripts/ntp-wait

	* ntptrace/ntptrace.c (DoTrace): If the server's srcadr is 0.0.0.0
	then we haven't synced yet.  Note and punt.
	Reported by: Bdale Garbee <bdale@gag.com>,http://bugs.debian.org/56551

2000-02-09  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ports/winnt/include/config.h: Typo (CLOCK_PALISADE comment)
	From: Carl Byington <carl@five-ten-sg.com>

	* configure.in: Disable kernel_fll_bug for Generic_105181-17 under
	Solaris-2.6
	From: Juergen Georgi <georgi@belwue.de>

2000-02-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99d

	* html/Oncore-SHMEM.htm: New document
	* html/driver30.htm: Cleanup and improvements
	From: Reg Clemens <reg@dwf.com>
