@@ -16,8 +16,6 @@ Introduction
 In NMEA mode, the Oncore GPS receiver provides the user with the same information as
 other GPS receivers.
 In BINARY mode, it can provide a lot of additional information.
-When using the Oncore GPS receiver with NTP, this additional information is usually
-not available since the receiver is only talking to the oncore driver in NTPD.
 <P>
 In particular, you can ask for satellite positions, satellite health, signal levels,
 the ephemeris and the almanac, and you can set many operational parameters.
@@ -25,18 +23,44 @@ In the case of the VP,
 you can get the pseudorange corrections necessary to act as a DGPS base station, and you can see
 the raw satellite data messages themselves.
 <P>
-To make use of this information you will need an Oncore Reference Manual for the
-Oncore GPS receiver that you have.  The Manual for the VP only exists as a paper
-document, the UT manuals are available as a pdf document online.
-<P>
+When using the Oncore GPS receiver with NTP, this additional information is usually
+not available since the receiver is only talking to the oncore driver in NTPD.
 To make this information available for use in other programs,
 (say graphic displays of satellites positions, plots of SA, etc.), a shared memory interface
 (SHMEM) has been added to the refclock_oncore driver on those operating systems that support
 shared memory.
 <P>
+To make use of this information you will need an Oncore Reference Manual for the
+Oncore GPS receiver that you have.  The Manual for the VP only exists as a paper
+document, the UT manuals are available as a pdf document online.
+<P>
 This interface was written by Poul-Henning Kamp (phk@FreeBSD.org), and modified by
 Reg Clemens (reg@dwf.com).
 The interface is known to work in FreeBSD, Linux, and Solaris.
+<H4>
+Activating the Interface
+</H4>
+Although the Shared Memory Interface will be compiled into the Oncore driver
+on those systems where Shared Memory is supported, to activate this interface you must
+include a <B>STATUS</B> line in the <tt>/etc/ntp.oncore</tt> data file that looks like
+<PRE>
+        STATUS < file_name >
+</PRE>
+Thus a line like
+<PRE>
+        STATUS /var/adm/ntpstats/ONCORE
+</PRE>
+would be acceptable.
+This file name will be used to access the Shared Memory.
+<P>
+In addition, one the two keywords <B>Posn2D</B> and <B>Posn3D</B> can be added to
+see @@Ea records containing the 2D or 3D position of the station (see below).
+Thus to activate the interface, and see 3D positions, something like
+<PRE>
+        STATUS /var/adm/ntpstats/ONCORE
+        Posn3D
+</PRE>
+would be required.
 <H4>
 Storage of Messages in Shared Memory
 </H4>
@@ -68,7 +92,7 @@ if something like that were legal.
 That is, there are two bytes (caution, these may NOT be aligned with word boundaries, so
 the field needs to be treated as a pair of u_char), that contains the length of the next
 message.
-This is followed by a u_char, a sequence number, that is incremented whenever a new message of
+This is followed by a u_char sequence number, that is incremented whenever a new message of
 this type is received.
 This is followed by 'length' characters of the actual message.
 <P>
@@ -82,35 +106,37 @@ The messages are recognized by reading the headers in the data itself, viz @@Ea 
 <P>
 There are two special cases.
 <P>
-(1) The almanac takes a total of 34 subrecords all starting with @@Cb.  <br>
-35 records are allocated.
+(1) The almanac takes a total of 34 submessages all starting with @@Cb.  <br>
+35 slots are allocated in shared memory.
 Each @@Cb message is initially placed in the first of these locations,
-and then  later it is moved to the appropriate location for that sub-message.
+and then  later it is moved to the appropriate location for that submessage.
 The submessages can be distinguished by the first two characters following the @@Cb header,
 and new data is received only when the almanac changes.
 <P>
-(2) The @@Ea record contains the satellite position, and are received 1/second.
+(2) The @@Ea message contains the calculated location of the antenna, and is received
+once per second.
 However, when in timekeeping mode, the receiver is normally put in 0D mode, with the
-position fixed to get better accuracy, so the current position is not available.
+position fixed, to get better accuracy.
+In 0D mode no position is calculated.
 <P>
-When the SHMEM option is active, one @@Ea record is hijacked each 15s, and the receiver
-is put back in 3D mode so the the current location can be determined (for position determination, or for
+When the SHMEM option is active,
+and if one of <B>Posn2D</B> or <B>Posn3D</B> is specified,
+one @@Ea record is hijacked each 15s, and the receiver
+is put back in 2D/3D mode so the the current location can be determined (for position determination, or for
 tracking SA).
-The timekeeping code is careful NOT to use the time associated with this (less accurate) 3D tick
+The timekeeping code is careful NOT to use the time associated with this (less accurate) 2D/3D tick
 in its timekeeping functions.
 <P>
-Following the initial @@Ea record are 3 subrecords for a total of four.
+Following the initial @@Ea message are 3 additional slots for a total of four.
 As with the almanac, the first gets filled each time a new record becomes available,
-Later in the code, it is distributed to the appropriate subrecord.
-These records can be distinguished by different bit patterns in the last byte of the record.
-Currently there
-are subrecords for 0D, 2D, 3D, but the code only fills in the 0D and 3D positions at
-present.
+later in the code, the message is distributed to the appropriate slot.
+The additional slots are for messages containing 0D, 2D and 3D positions.
+These messages can be distinguished by different bit patterns in the last data byte of the record.
 <H4>
 Opening the Shared Memory File
 </H4>
-The shared memory segment is accessed through a file name given on a ACCESS card in the
-/etc/ntp.oncore input file.
+The shared memory segment is accessed through a file name given on a <B>ACCESS</B> card in the
+<tt>/etc/ntp.oncore</tt> input file.
 The following code could be used to open the Shared Memory Segment:
 
 <PRE>
@@ -205,24 +231,27 @@ The following code shows how to get to the individual records.
         }
 </PRE>
 
-<P>
 The structure Hdr contains the Identifying string for each of the messages that
 we want to examine, and the name of a program to call when a new message of that
 type is arrives.
-<P>
 The loop can be run every few seconds to check for new data.
-<P>
-There are two more complete examples
-(one that that show satellite positions and the station position as affected by SA, and
-another that computes the effective horizon by watching satellite tracks) that
-will be found in the GNU-zipped tar file 
+<H4>
+Examples
+</H4>
+There are two complete examples available.
+The first plots satellite positions and the station position as affected by SA, and
+keeps track of the mean station position, so you can run it for periods of days
+to get a better station position.
+The second shows the effective horizon by watching satellite tracks.
+The examples will be found in the GNU-zipped tar file
 <A HREF=ftp://ftp.udel.edu/pub/ntp/software/OncorePlot.tar.gz>
 ftp://ftp.udel.edu/pub/ntp/software/OncorePlot.tar.gz</A>.
 <P>
-Try it, have fun.
+Try the new interface, enjoy.
 <HR>
 <ADDRESS>
-<Reg.Clemens> reg@dwf.com
-</ADDRESS>
+Reg.Clemens (reg@dwf.com),
+Poul-Henning Kamp (phk@FreeBSD.org)
+<ADDRESS>
 </BODY>
 </HTML>
