@@ -145,7 +145,8 @@ Not used by this driver.</DD>
 Not used by this driver.</DD>
 </DL>
 <B>Additional Information</B>
-<P>The driver was initially developed on FreeBSD, and has since been tested on Linux SunOS and Solaris.
+<P>The driver was initially developed on FreeBSD, and has since been tested
+on Linux, SunOS and Solaris.
 
 <P>There is a driver specific configuration file <TT>/etc/ntp.oncore</TT>
 that contains information on the startup mode, the location of the GPS
